# bartender

./: .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  alembic.ini  config-example.yaml  config-haddock3.yaml  dirac-notes.md  dummy_token_generator.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: dirac.yml  tests.yml
bartender/: __init__.py  __main__.py  _ssh_utils.py  config.py  conftest.py  destinations.py  picker.py  settings.py
bartender/db/: base.py  utils.py
bartender/db/dao/: dummy_dao.py  job_dao.py  user_dao.py
bartender/db/migrations/: env.py
bartender/db/models/: __init__.py  dummy_model.py  job_model.py  user.py
bartender/filesystem/: __init__.py  assemble_job.py  stage_job_input.py
bartender/filesystems/: __init__.py  abstract.py  build.py  local.py  sftp.py
bartender/schedulers/: abstract.py  build.py  dependencies.py  direct.py  memory.py  runner.py  slurm.py
bartender/tests/: __init__.py  conftest.py  test_config.py  test_context.py  test_destinations.py  test_dummy.py  test_filesystem.py  test_job.py  test_picker.py  test_user.py
bartender/web/: __init__.py  application.py  lifetime.py
deploy/: Dockerfile  Dockerfile.dirac  README.md  docker-compose.dev.yml  docker-compose.dirac.yml  docker-compose.yml
docs/: conf.py  configuration.md  deploy.md  develop.md  index.md  index.rst  user_management.md
src/bartender/: __main__.py  async_utils.py  check_load.py  config.py  context.py  destinations.py  link.py  picker.py  settings.py  ssh_utils.py  staging.py  template_environment.py  user.py  walk_dir.py
tests/: conftest.py  test_config.py  test_filesystem.py  test_picker.py  test_staging.py  test_user.py  test_walk_dir.py
tests-dirac/: Dockerfile  README.md  docker-compose.yml  test_it.py  test_renewer.py  test_scheduler.py
tests/filesystems/: test_build.py  test_dirac_config.py
tests/schedulers/: __init__.py  helpers.py  test_arq.py  test_build.py  test_eager.py  test_helpers.py  test_memory.py  test_slurm.py
tests/web/: __init__.py  test_application.py  test_interactive_apps.py  test_job.py  test_role.py  test_submit.py  test_unroll.py  test_user.py
tests_dirac/: Dockerfile  README.md  conftest.py  docker-compose.yml  test_it.py  test_renewer.py
(+101 files in other folders)
