[tool.poetry]
name = "bartender"
version = "0.3.0"
description = "Job middleware for i-VRESSE"
authors = [

]
maintainers = [

]
readme = "README.md"
packages = [{include = "bartender", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# TODO upgrade to pydantic v2
fastapi = "^0.99.0"
uvicorn = {version = "^0.21.1", extras = ["standard"]}
pydantic = {version = "^1.10.7", extras = ["dotenv"]}
yarl = "^1.7.2"
ujson = "^5.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
alembic = "^1.10.2"
asyncpg = "^0.27.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
asyncssh = "^2.13.1"
pyyaml = "^6.0"
arq = "^0.25.0"
fs = "^2.4.16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# poetry has upper limit for jsonschema, so lowering ourselves to it
# unreleased poetry > 1.6.1 will use latest fastjsonschema
jsonschema = "<4.18.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
mypy = "^1.1.1"
isort = "^5.10.1"
yesqa = "^1.3.0"
pre-commit = "^2.19.0"
wemake-python-styleguide = "^0.16.1"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
anyio = "^3.6.1"
pytest-env = "^1.1.1"
httpx = "^0.22.0"
types-aiofiles = "^23"
testcontainers = "^3.7.0"
types-pyyaml = "^6.0.12.2"
rsa = "^4.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-autoapi = "^3.0.0"
furo = "^2023.3.27"
sphinx-copybutton = "^0.5.1"
myst-parser = "^1.0.0"
sphinxcontrib-mermaid = "^0.8.1"

[tool.poetry.scripts]
bartender = 'bartender.__main__:main'

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src","tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "BARTENDER_DB_BASE=bartender_test",
]

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
